syntax = "proto3";

package tests.fuzz.protos;

import "test/fuzz/common.proto";
import "validate/validate.proto";

// Representation of an entire HTTP request.
message HttpData {
  test.fuzz.Headers headers = 1;

  string data = 2;

  test.fuzz.Headers trailers = 3;

  test.fuzz.Headers metadata = 4;
}

message IamTokenSubscriberInput {

  // Input to the constructor of IamTokenSubscriber.
  string iam_service_cluster = 1;

  // Input to the constructor of IamTokenSubscriber.
  string iam_service_uri = 2;

  // Input to the constructor of IamTokenSubscriber.
  // Should be at least one character, otherwise IamTokenSubscriber does nothing useful.
  string access_token = 3 [(validate.rules).string.min_len = 1];

  // A fake response from the HttpAsyncClient when making a request to the IAM server.
  HttpData async_client_response = 4 [(validate.rules).message.required = true];
}